--- a/style.css
+++ b/style.css
@@ -39,10 +39,11 @@ main, footer{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 .presentation{
     color: white;
-    padding-left: 25px;
+    text-align: center;
     font-size: 2.4rem;
 }
 .btnPlus{
